--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-openid-connect": "^2.8.0",
+    "nodemon": "^2.0.19"
   },
   "name": "ghostfiles",
   "version": "1.0.0",
