--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,17 @@
 runtime: nodejs12
+
+handlers:
+- url: /css
+  static_dir: css
+
+# All URLs ending in .gif .png or .jpg are treated as paths to
+# static files in the static/ directory. The URL pattern is a
+# regular expression, with a grouping that is inserted into the
+# path to the file.
+- url: /(.*\.(gif|png|jpg))$
+  static_files: images/\1
+  upload: images/.*\.(gif|png|jpg)$
+  # ...
+
+- url: /.* 
+  script: index.js
