--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,5 @@ node_modules/.package-lock.json
 
 .DS_Store
 package-lock.json
+node_modules/.package-lock.json
+node_modules/.package-lock.json
