--- a/app.yaml
+++ b/app.yaml
@@ -8,10 +8,16 @@ handlers:
 # static files in the static/ directory. The URL pattern is a
 # regular expression, with a grouping that is inserted into the
 # path to the file.
-- url: /(.*\.(gif|png|jpg))$
-  static_files: images/\1
-  upload: images/.*\.(gif|png|jpg)$
+
+#- url: /images/(.*\.(gif|png|jpg))$
+  #static_files: images/\1
+  #upload: images/.*\.(gif|png|jpg)$
+
+
+- url: /images/.*
+  static_dir: images
+  #upload: images/.*\.(gif|png|jpg)$
   # ...
 
-- url: /.* 
+- url: /.*
   script: index.js
