--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,11 @@
 runtime: nodejs12
 
 handlers:
-- url: /css
-  static_dir: css
+- url: /assets/css
+  static_dir: assets/css
+
+- url: /assets/images
+  static_dir: assets/images
 
 # All URLs ending in .gif .png or .jpg are treated as paths to
 # static files in the static/ directory. The URL pattern is a
@@ -14,10 +17,6 @@ handlers:
   #upload: images/.*\.(gif|png|jpg)$
 
 
-- url: /images/.*
-  static_dir: images
-  #upload: images/.*\.(gif|png|jpg)$
-  # ...
 
 - url: /.*
   script: index.js
